feat: add auth services
